--- a/tabela.html
+++ b/tabela.html
@@ -307,7 +307,7 @@
                 </div>
                 <div class="info-item">
                     <span class="info-label">Diagnóstico:</span>
-                    [cite_start]<span class="info-content">Exame Parasitológico de Fezes (EPF) para ovos[cite: 3]. Métodos quantitativos como o de Kato-Katz são úteis para avaliar a carga parasitária.</span>
+                    <span class="info-content">Exame Parasitológico de Fezes (EPF) para ovos[cite: 3]. Métodos quantitativos como o de Kato-Katz são úteis para avaliar a carga parasitária.</span>
                 </div>
                 <div class="info-item">
                     <span class="info-label">Tratamento:</span>
@@ -357,7 +357,7 @@
                 </div>
                 <div class="info-item">
                     <span class="info-label">Diagnóstico:</span>
-                    <span class="info-content">Ovos raramente são encontrados nas fezes. [cite_start]Os métodos mais eficazes são a pesquisa de larvas em fezes, como o método de Baermann-Moraes e a cultura em carvão ativado[cite: 3]. Endoscopia com biópsia duodenal também pode ser usada.</span>
+                    <span class="info-content">Ovos raramente são encontrados nas fezes. Os métodos mais eficazes são a pesquisa de larvas em fezes, como o método de Baermann-Moraes e a cultura em carvão ativado[cite: 3]. Endoscopia com biópsia duodenal também pode ser usada.</span>
                 </div>
                 <div class="info-item">
                     <span class="info-label">Tratamento:</span>
@@ -407,7 +407,7 @@
                 </div>
                 <div class="info-item">
                     <span class="info-label">Diagnóstico:</span>
-                    [cite_start]<span class="info-content">Pesquisa de microfilárias no sangue[cite: 3]. A coleta deve ser feita preferencialmente à noite, entre 22h e 2h, quando as microfilárias estão em maior concentração no sangue periférico. Testes sorológicos também podem ser utilizados.</span>
+                    <span class="info-content">Pesquisa de microfilárias no sangue[cite: 3]. A coleta deve ser feita preferencialmente à noite, entre 22h e 2h, quando as microfilárias estão em maior concentração no sangue periférico. Testes sorológicos também podem ser utilizados.</span>
                 </div>
                 <div class="info-item">
                     <span class="info-label">Tratamento:</span>
@@ -557,7 +557,7 @@
                 </div>
                 <div class="info-item">
                     <span class="info-label">Diagnóstico:</span>
-                    [cite_start]<span class="info-content">Exame Parasitológico de Fezes (EPF) para encontrar ovos ou proglotes. Ovos de T. solium e T. saginata são indistinguíveis.</span>
+                    <span class="info-content">Exame Parasitológico de Fezes (EPF) para encontrar ovos ou proglotes. Ovos de T. solium e T. saginata são indistinguíveis.</span>
                 </div>
                 <div class="info-item">
                     <span class="info-label">Tratamento:</span>
@@ -607,7 +607,7 @@
                 </div>
                 <div class="info-item">
                     <span class="info-label">Diagnóstico:</span>
-                    [cite_start]<span class="info-content">Exames de imagem, como tomografia e ressonância magnética, são cruciais para localizar cistos no cérebro[cite: 4]. Testes sorológicos como o ELISA e o Western blot também são utilizados para detectar a presença de anticorpos.</span>
+                    <span class="info-content">Exames de imagem, como tomografia e ressonância magnética, são cruciais para localizar cistos no cérebro. Testes sorológicos como o ELISA e o Western blot também são utilizados para detectar a presença de anticorpos.</span>
                 </div>
                 <div class="info-item">
                     <span class="info-label">Tratamento:</span>
