--- a/tabela.html
+++ b/tabela.html
@@ -86,7 +86,7 @@
 </head>
 <body>
 
-    <h1>Parasitologia Médica - Memorex PR1 - IDOMED</h1>
+    <h1>Parasitologia Médica - Memorex PR1/S3 - IDOMED</h1>
 
     <div class="container">
 
