--- a/tabela.html
+++ b/tabela.html
@@ -623,7 +623,7 @@
     </div>
 
     <div class="credits">
-        <p>Baseado nos Slides de Parasitologia Médica fornecida para estudo (Arailes, aluno IDOMED Quixada T6A).</p>
+        <p>Baseado nos Slides de Parasitologia Médica fornecidos para estudo (Arailes, aluno IDOMED Quixada T6A).</p>
     </div>
 
     <script>
